--- a/nextflow.config
+++ b/nextflow.config
@@ -1,8 +1,14 @@
 params {
   query = false
   db = false
-  outdir = Blast_Results
+  outdir = 'Blast_Results'
   threads = 40
+}
+
+profiles {
+  local {
+    cpus = "$params.threads"
+  }
 }
 
 singularity.autoMounts=true
