add blast options to only return top X hits

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,8 +1,19 @@
 params {
+  help = false
   query = false
   db = false
+  options = '-outfmt 6 -num_alignments 5'    //  by default, tablular output, get top 5 hits
   outdir = 'Blast_Results'
+  /* optional, link executables */
+  blastn_app = 'blastn'
+  makeblastdb = 'makeblastdb'
   threads = 40
+}
+
+env {
+  blastn_options = " $params.options "
+  blastn_app = " $params.blastn_app "
+  makeblastdb_app = " $params.makeblastdb "
 }
 
 profiles {
